# jt_wrs/__init__.py
@@ -1,2 +1,2 @@
 from .wrs import get_workflows, get_workflow, register_workflow, get_workflowfile, get_workflow_package, \
-    get_workflow_by_id_and_version, get_execution_plan
+    get_workflow_by_id_and_version, get_execution_plan, get_jobjson_template
